// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TITLES IN ALL CAPS are fixed 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <h1
          class="ltx_title ltx_title_document"
        >
          Why Am I Shouting
        </h1>
        <div
          class="engrafo-metadata"
        >
          <div
            class="engrafo-metadata-custom"
          />
        </div>
        


        <section
          class="ltx_section"
          id="S1"
        >
          

          <h2
            class="ltx_title ltx_title_section"
          >
            

            <span
              class="ltx_tag ltx_tag_section"
            >
              <a
                href="#S1"
              >
                1 
              </a>
            </span>
            Urgh Stop It
          </h2>
          


          <div
            class="ltx_para"
            id="S1.p1"
          >
            

            <p
              class="ltx_p"
            >
              Hello.
            </p>
            

          </div>
          

        </section>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`basic titles and headings render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <h1
          class="ltx_title ltx_title_document"
        >
          Headings Test
        </h1>
        <div
          class="engrafo-metadata"
        >
          <div
            class="engrafo-metadata-custom"
          />
        </div>
        


        <section
          class="ltx_section"
          id="S1"
        >
          

          <h2
            class="ltx_title ltx_title_section"
          >
            

            <span
              class="ltx_tag ltx_tag_section"
            >
              <a
                href="#S1"
              >
                1 
              </a>
            </span>
            Section Title
          </h2>
          


          <section
            class="ltx_subsection"
            id="S1.SS1"
          >
            

            <h3
              class="ltx_title ltx_title_subsection"
            >
              

              <span
                class="ltx_tag ltx_tag_subsection"
              >
                1.1 
              </span>
              Subsection Title
            </h3>
            


            <section
              class="ltx_subsubsection"
              id="S1.SS1.SSS1"
            >
              

              <h4
                class="ltx_title ltx_title_subsubsection"
              >
                
Subsubsection Title
              </h4>
              


              <section
                class="ltx_paragraph"
                id="S1.SS1.SSS1.Px1"
              >
                

                <h5
                  class="ltx_title ltx_title_paragraph"
                >
                  Paragraph title
                </h5>
                


                <div
                  class="ltx_para"
                  id="S1.SS1.SSS1.Px1.p1"
                >
                  

                  <p
                    class="ltx_p"
                  >
                    Hello.
                  </p>
                  

                </div>
                

              </section>
              

            </section>
            

          </section>
          

        </section>
        

        <section
          class="ltx_section"
          id="S2"
        >
          

          <h2
            class="ltx_title ltx_title_section"
          >
            

            <span
              class="ltx_tag ltx_tag_section"
            >
              <a
                href="#S2"
              >
                2 
              </a>
            </span>
            Another section
          </h2>
          


        </section>
        

        <section
          class="ltx_section"
          id="Sx1"
        >
          

          <h2
            class="ltx_title ltx_title_section"
          >
            Unnumbered section
          </h2>
          


        </section>
        

        <section
          class="ltx_section"
          id="S3"
        >
          

          <h2
            class="ltx_title ltx_title_section"
          >
            

            <span
              class="ltx_tag ltx_tag_section"
            >
              <a
                href="#S3"
              >
                3 
              </a>
            </span>
            Another section
          </h2>
          


          <div
            class="ltx_para"
            id="S3.p1"
          >
            

            <p
              class="ltx_p"
            >
              A reference to section 
              <a
                class="ltx_ref"
                href="#S1"
                title="1 Section Title ‣ Headings Test"
              >
                <span
                  class="ltx_text ltx_ref_tag"
                >
                  1
                </span>
              </a>
              .
            </p>
            

          </div>
          

        </section>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`bold is stripped from title 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <h1
          class="ltx_title  ltx_title_document"
        >
          Why would someone do this

        </h1>
        <div
          class="engrafo-metadata"
        >
          <div
            class="engrafo-metadata-custom"
          />
        </div>
        


        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            Hello.
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;
